--- a/.githubs/workflows/deploy.yml
+++ b/.githubs/workflows/deploy.yml
@@ -9,17 +9,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repo
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🛡️ Setup SSH key manually
+      - name: 🔐 Prepare SSH private key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > key.pem
           chmod 600 key.pem
 
-      - name: 🚀 SSH into EC2 and run deploy.sh
+      - name: 🌐 Add EC2 to known_hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: 🚀 Connect to EC2 and run deploy.sh
         run: |
           ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            cd /var/www/sandik
-            ./deploy.sh
+            echo "✅ Connected to EC2"
+
+            cd /var/www/sandik || { echo "❌ Folder not found"; exit 1; }
+
+            echo "▶️ Running deploy.sh"
+            ./deploy.sh || { echo "❌ Deployment script failed"; exit 1; }
+
+            echo "✅ Deployment completed"
           EOF
