--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             echo "✅ Connected to EC2"
-
+            git config --global --add safe.directory /var/www/sandik
             cd /var/www/sandik || { echo "❌ Folder not found"; exit 1; }
 
             echo "▶️ Running deploy.sh"
