chore(ci): refactor EC2 deployment workflow
- Rename workflow to more generic "Deploy to EC2" (removing project-specific name)
- Consolidate SSH setup steps into single "Set up SSH access" step
- Store private key in ~/.ssh directory instead of working directory
- Add -tt flag to SSH command for better terminal allocation
- Improve error messages and step naming
- Remove redundant executable permission step (handled in deploy.sh)
- Maintain same core functionality while simplifying the workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,34 @@
-name: 🚀 Deploy Sandik to EC2
+name: 🚀 Deploy to EC2
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repository
+      - name: ⏬ Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🔐 Prepare SSH private key
-        run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > key.pem
-          chmod 600 key.pem
-
-      - name: 🌐 Add EC2 to known_hosts
+      - name: 🔑 Set up SSH access
         run: |
           mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > ~/.ssh/key.pem
+          chmod 600 ~/.ssh/key.pem
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: 🚀 Connect to EC2 and run deploy.sh
         run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -tt -i ~/.ssh/key.pem -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             echo "✅ Connected to EC2"
 
+            # Safely allow Git in CI context
             git config --global --add safe.directory /var/www/sandik
 
-            cd /var/www/sandik || { echo "❌ Folder not found"; exit 1; }
-
-            echo "🔐 Making deploy.sh executable..."
-            chmod +x deploy.sh
+            cd /var/www/sandik || { echo "❌ Project folder not found"; exit 1; }
 
             echo "▶️ Running deploy.sh"
             ./deploy.sh || { echo "❌ Deployment script failed"; exit 1; }
