--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,7 @@ jobs:
             sudo ./deploy.sh || { echo "❌ Deployment script failed"; exit 1; }
 
             echo "✅ Deployment completed"
+            echo "🧹 Cleaning up and closing SSH"
+            exit 
+
           EOF
