--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
             cd /var/www/sandik || { echo "❌ Project folder not found"; exit 1; }
 
             echo "🔐 Making deploy.sh executable..."
-            echo "ℹ️ Current user: $(USER)"
+            echo "ℹ️ Current user: $USER"
             sudo chown $USER:$USER deploy.sh
             sudo chmod +x deploy.sh || { echo "❌ chmod failed"; exit 1; }
 
