fix(ci): inline whoami and id to avoid empty user var in SSH heredoc

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
             cd /var/www/sandik || { echo "❌ Project folder not found"; exit 1; }
 
             echo "🔐 Making deploy.sh executable..."
-            CURRENT_USER=$(whoami)
-            echo "ℹ️ Current user: $CURRENT_USER"
-            sudo chown $CURRENT_USER:$CURRENT_USER deploy.sh
+            echo "ℹ️ Current user: $(whoami):$(id -gn)"
+            sudo chown $(whoami):$(id -gn) deploy.sh
             sudo chmod +x deploy.sh || { echo "❌ chmod failed"; exit 1; }
+
 
             echo "▶️ Running deploy.sh"
             sudo ./deploy.sh || { echo "❌ Deployment script failed"; exit 1; }
