--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
             cd /var/www/sandik || { echo "❌ Project folder not found"; exit 1; }
 
             echo "🔐 Making deploy.sh executable..."
-            echo "ℹ️ Current user: $(whoami):$(id -gn)"
-            sudo chown $(whoami):$(id -gn) deploy.sh
+            echo "ℹ️ Setting ownership to ubuntu:ubuntu"
+            sudo chown ubuntu:ubuntu deploy.sh
             sudo chmod +x deploy.sh || { echo "❌ chmod failed"; exit 1; }
 
 
