refactor: externalize credentials to environment variables for security
Removed all hardcoded credentials and sensitive data from codebase:
- Database credentials moved to .env file
- Stripe API keys externalized to environment variables
- Production server IP removed, replaced with APP_URL config
- Updated .env.example with all required configuration variables

All sensitive data now properly managed through environment variables
and excluded from version control via .gitignore.

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 
 APP_ENV=local
 APP_DEBUG=false
+APP_URL=http://localhost/sandik/
 
 # Database Configuration
 DB_HOST=localhost
@@ -16,6 +17,10 @@ DB_HOST_PROD=localhost
 DB_NAME_PROD=sandik
 DB_USERNAME_PROD=your_username
 DB_PASSWORD_PROD=your_secure_password
+
+# Stripe Configuration (Get from https://dashboard.stripe.com/apikeys)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_PUBLIC_KEY=pk_test_your_stripe_public_key_here
 
 # Security
 CSRF_SECRET=your_random_secret_key_here
