chore: change deployment workflow to manual trigger
Changed deployment from automatic (on push) to manual trigger only.
This prevents failed deployments while setting up new production
infrastructure. Workflow can be triggered manually from GitHub
Actions tab when ready.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: 🚀 Deploy Sandik to EC2
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:  # Manual trigger only - run when production server is ready
 
 jobs:
   deploy:
